--- a/Cliente/4/d/ejercicio4c.css
+++ b/Cliente/4/d/ejercicio4c.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap');
-
 :root{
     --primary-color: #333;
     --secondary--color: #49ac30;
@@ -14,15 +12,11 @@ body{
     justify-content: center;
 }
 
-div{
+table{
     background-color: #666;
     padding: 10px;
     border-radius: 10px;
     animation: cambiarShadow 3s infinite;
-    h1{
-        text-align: center;
-        
-    }
 }
 
 hr {
