--- a/Cliente/5/i/ejercicioI.css
+++ b/Cliente/5/i/ejercicioI.css
@@ -1,4 +1,5 @@
 body {
+    font-family: 'Comic Sans';
     background-color: #555;
     color: #fff;
     padding: 20px; /* Añadir espacio alrededor del contenido */
