--- a/Cliente/5/b/ejercicio5b.css
+++ b/Cliente/5/b/ejercicio5b.css
@@ -6,7 +6,7 @@
 body{
     background-color: var(--primary-color);
     height: 100vh;
-
+    color: #fff;
     display: flex;
     align-items: center;
     justify-content: center;
