--- a/Servidor/P11/styles/style.css
+++ b/Servidor/P11/styles/style.css
@@ -1,7 +1,6 @@
 :root {
     --color-fondo: #555;
     --color-texto: #fff;
-    --color-borde: #555;
 }
 
 * {
@@ -22,7 +21,7 @@ header {
     align-items: center;
     padding: 10px 20px;
     background-color: var(--color-fondo);
-    border-bottom: 1px solid var(--color-borde);
+    border-bottom: 1px solid var(--color-fondo);
 }
 nav {
     display: flex;
@@ -78,16 +77,15 @@ table {
     
     tr {
         background-color: #333;
-        &:hover {
-            background-color: #555;
+        &:not(:first-child):hover {
+            background-color: #777;
         }
     }
-
 }
 
 footer {
     text-align: center;
     padding: 10px 0;
     background-color: var(--color-fondo);
-    border-top: 1px solid var(--color-borde);
+    border-top: 1px solid var(--color-fondo);
 }
