--- a/Cliente/CSS1/ejercicio2/ejercicio2.css
+++ b/Cliente/CSS1/ejercicio2/ejercicio2.css
@@ -1,23 +1,23 @@
 *{
-font-family:Arial;
+	font-family:Arial;
 }
 a[href^="http"]{
 	border-style:solid; 
 	border-width: 5px;
 	border-color: LightSalmon;
 }
-div#primero ul li:nth-child(){
+#primero ul li:nth-child(-n+5){
 color:red;
 }
-div#segundo ul li:nth-child(){
+div#segundo ul li:nth-child(+n+5){
 color:blue;
 }
-div#tercero ul li:nth-child(){
+div#tercero ul li:nth-child(3n+2){
 color:green;
 }
-div#tercero ul li:nth-last-child){
+div#tercero ul li:nth-last-child(3){
 color:orange;
 }
-div#tercero ul li:nth-last-child(){
+div#tercero ul li:nth-last-child(3n-2){
 color:grey;
 }
