--- a/Cliente/CSS1/ejercicio10/ejercicio10.css
+++ b/Cliente/CSS1/ejercicio10/ejercicio10.css
@@ -3,8 +3,8 @@
   background-color:#ddd;
   width:200px;
   padding:10px;
-	/*
-	
+	box-shadow: 0 0 10px red;
+  /*
 	shadow
 	*/
 }
@@ -16,8 +16,8 @@
   width:200px;
   padding:10px;
   margin-top:50px;
-	/*
-	
+  box-shadow: 0 0 10px red;
+  /*
 	shadow
 	*/
 }
