--- a/Cliente/CSS1/ejercicio6/ejercicio6.css
+++ b/Cliente/CSS1/ejercicio6/ejercicio6.css
@@ -1,16 +1,15 @@
 #contenido{
-background:url(  ?  );
-background-repeat:no-repeat;
+      background:url(  torre.jpg  );
+      background-repeat:no-repeat;
 
-border: 20px solid transparent;
-      -moz-border-image: -moz-linear-gradient( ? , ? ?, ?  ?);
+      border: 20px solid transparent;
       -webkit-border-image: -webkit-linear-gradient(left, #3acfd5 0%, #3a4ed5 100%);
       border-image: linear-gradient(to right, #3acfd5 0%, #3a4ed5 100%);
       border-image-slice: 1;
-width:150px;
-height:250px;
-padding:20px;
+      width:150px;
+      height:250px;
+      padding:20px;
 
-background-origin:padding-box;
-background-clip:content-box;
+      background-origin:padding-box;
+      background-clip:content-box;
 }
