--- a/Cliente/TresEnRaya/css/style.css
+++ b/Cliente/TresEnRaya/css/style.css
@@ -1,13 +1,40 @@
+*{
+    text-align: center;
+}
+
 body{
+    background-color: rgba(78, 52, 12, 0.568);
+
     background-image: url("/img/fondo.png");
-    background-position: center;
+    background-position: center center;
+    background-size: cover;
     background-repeat: no-repeat;
 
+    margin: 0px;
     width: 100vw;
     height: 100vh;
 
     align-items: center;
     display: flex;
     justify-content: center;
-    margin: 0px;
+}
+
+table{
+    background-color: rgba(70, 41, 7, 0.4);
+    border-radius: 20px;
+    border-spacing: 25px;
+}
+
+td{
+    background-color: rgba(70, 41, 7, 0.3);
+    border-radius: 20px;
+}
+
+ul{
+    margin-left: 50px;
+    margin-right: 50px;
+    background-color: rgba(70, 41, 7, 0.5);
+    border-radius: 20px;
+    padding: 0;
+    list-style-type: none;
 }
