--- a/Cliente/TresEnRaya/css/style.css
+++ b/Cliente/TresEnRaya/css/style.css
@@ -65,6 +65,18 @@ dialog {
     }
 }
 
+/* Que quede centrado completamente */
+#resultado{
+    h1{ 
+        height: 49vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 50px;
+    }
+}
+
+
 table{
     background-color: rgba(70, 41, 7, 0.4);
     border-radius: 20px;
