--- a/Cliente/trimestre_2/reproductor/css/style.css
+++ b/Cliente/trimestre_2/reproductor/css/style.css
@@ -16,6 +16,18 @@ main{
     align-items: center;
 }
 
+section{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+video{
+    width: 100%;
+    border-radius: 10px;
+}
+
 h1{
     color: var(--text-color);
     font-size: 2em;
@@ -24,16 +36,15 @@ h1{
 .controls{
     display: flex;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 .progress-bar{
     display: flex;
     justify-content: center;
     margin-top: 20px;
+    width: 100%;
 }
 #progress{
-    width: 50%;
-    background-color: #fff;
     border-radius: 10px;
 }
 #volume{
@@ -48,4 +59,12 @@ section{
 }
 #progress{
     width: 40%;
+}
+
+button{
+    margin: 5px;
+    background-color: transparent;
+    border: 1px solid var(--fondo);
+    border-radius: 20px;
+    padding: 10px;
 }
