--- a/Cliente/trimestre_2/reproductor/css/style.css
+++ b/Cliente/trimestre_2/reproductor/css/style.css
@@ -1,5 +1,7 @@
 :root{
     --fondo: #333;
+    --card-color:wheat;
+    --card-buton-color: beige;
     --text-color:#fff;
 }
 
@@ -52,10 +54,10 @@ h1{
 }
 
 section{
-    background-color: wheat;
+    background-color: var(--card-color);
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0px 0px 10px wheat;
+    box-shadow: 0px 0px 10px var(--card-color);
 }
 #progress{
     width: 40%;
@@ -63,8 +65,18 @@ section{
 
 button{
     margin: 5px;
-    background-color: transparent;
-    border: 1px solid var(--fondo);
+    background-color: var(--card-buton-color);
+    border: 0px;
     border-radius: 20px;
     padding: 10px;
+}
+
+button:hover{
+    background-color: var(--fondo);
+    color: var(--text-color);
+    box-shadow: 0 0 10px var(--fondo);
+}
+
+button:active{
+    scale: 0.9;
 }
