--- a/Interfaces_Web/viajes/assets/css/style.css
+++ b/Interfaces_Web/viajes/assets/css/style.css
@@ -53,6 +53,25 @@ main{
 }
 
 .imagen{
+    position: relative;
     width: 100%;
     height: 200px;
+}
+
+.imagen .text {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    padding: 5px;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+}
+
+.imagen:hover .text {
+    bottom: 50%;
+    left: 50%;
+    transform: translate(-50%, 50%);
+    background-color: rgba(0, 0, 0, 0.7);
 }
