--- a/trimestre_2/P4_Agenda/css/style.css
+++ b/trimestre_2/P4_Agenda/css/style.css
@@ -17,6 +17,7 @@ section{
     height: 90vh;
 }
 #list{
+    padding: 1rem;
     #buscador{
         display: flex;
         justify-content: center;
