--- a/T12_Panaderia/css/products.css
+++ b/T12_Panaderia/css/products.css
@@ -107,55 +107,28 @@ body{
 /* ====== */
 /* Main */
 /* ====== */
+
 main {
-    padding: 20px;
-    background-color: var(--background-color);
-    color: var(--text-color);
-    font-family: 'Roboto', sans-serif;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 10px;
+    margin: 10px;
 }
-
-main h1 {
-    color: var(--secondary-color);
-    font-size: 2em;
-    margin-bottom: 10px;
+.productos{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-column: 1/3;
+    gap: 10px;
 }
-
-main p {
-    font-size: 1.2em;
-    line-height: 1.5;
-    margin-bottom: 20px;
-}
-
-main .extra {
-    display: flex;
-}
-
-main section:not(.extra) {
-    flex: 0 1 50%;
-    margin: 0 10px;
+.producto {
+    text-align: center;
     background-color: var(--accent-color);
     border-radius: 10px;
-    text-align: center;
 }
-
-main .extra section {
-    padding: 5px;
-    img{
-        width: 50%;
-        border-radius: 10px;
-    }
-    button{
-        background-color: var(--primary-color);
-        color: var(--text-color);
-        border: none;
-        border-radius: 5px;
-        padding: 10px;
-        margin-top: 10px;
-        &:hover{
-            background-color: var(--secondary-color);
-            color: var(--accent-color);
-        }
-    }
+aside {
+    grid-column: 3/4;
+    background-color: var(--accent-color);
+    border-radius: 10px;
 }
 
 /* ====== */
