--- a/T12_Panaderia/css/products.css
+++ b/T12_Panaderia/css/products.css
@@ -117,6 +117,7 @@ main {
     grid-template-columns: 1fr 1fr 1fr;
     gap: 10px;
     margin: 10px;
+    background-color: var(--background-color);
 }
 .productos{
     display: grid;
