--- a/T12_Panaderia/css/style.css
+++ b/T12_Panaderia/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&display=swap');
+
 :root{
     --primary-color: #f5deb3; /* Wheat */
     --secondary-color: #d2691e; /* Chocolate */
@@ -7,7 +9,8 @@
 }
 
 body{
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Noto Color Emoji', 'Roboto', sans-serif;
+
     background-color: var(--background-color);
     color: var(--text-color);
     margin: 0;
@@ -27,12 +30,8 @@ body{
     color: var(--text-color)
 }
 
-.logo{
-    margin-left: 5%;
-    width: 75px;
-    &:hover{
-        scale: 1.05;
-    }
+.logo:hover{
+    scale: 1.05;
 }
 
 .menu-list {
@@ -125,10 +124,26 @@ main section:not(.extra) {
     background-color: var(--accent-color);
     border-radius: 10px;
     text-align: center;
+    iframe{
+        width: 90%;
+        height: 40%;
+        border-radius: 10px;
+    }
 }
 
 main .extra section {
     padding: 5px;
+    a {
+        background-color: var(--primary-color);
+        text-decoration: none;
+        color: var(--text-color);
+        border-radius: 10px;
+        padding: 10px;
+        &:hover{
+            background-color: var(--secondary-color);
+            color: var(--accent-color);
+        }
+    }
     img{
         width: 50%;
         border-radius: 10px;
@@ -143,6 +158,9 @@ main .extra section {
         &:hover{
             background-color: var(--secondary-color);
             color: var(--accent-color);
+        }
+        &:active {
+            scale: 0.98;
         }
     }
 }
