--- a/T12_Panaderia/css/contact.css
+++ b/T12_Panaderia/css/contact.css
@@ -95,6 +95,7 @@ body{
 /* Main */
 /* ====== */
 main {
+    min-height: 70vh;
     padding: 20px;
     background-color: var(--background-color);
     color: var(--text-color);
@@ -149,7 +150,6 @@ footer {
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding: 5px 5%;
     background-color: var(--secondary-color);
     color: var(--text-color)
 }
@@ -157,20 +157,19 @@ footer {
 .redes{
     display: flex;
     flex-direction: column;
-    margin: 3%;
-    padding: 10px;
+    padding: 20px;
+    margin:10px;
     a{
         text-decoration: none;
         color: var(--text-color);
         border-radius: 10px;
-        padding: 10px;
+        padding: 5px;
         &:hover{
             background-color: var(--primary-color);
         }
     }
     img{
-        width: 50px;
-        height: 50px;
+        width: 25px;
         border-radius: 50%;
     }
 }
@@ -178,8 +177,9 @@ footer {
 .contacto{
     display: flex;
     flex-direction: column;
-    margin: 3%;
-    padding: 10px;
+    padding: 5px;
+    margin:10px;
+
     a{
         text-decoration: none;
         color: var(--text-color);
