--- a/T12_Panaderia/css/products.css
+++ b/T12_Panaderia/css/products.css
@@ -99,6 +99,7 @@ main {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 10px;
+    min-height: 70vh;
     margin: 10px;
     background-color: var(--background-color);
 }
@@ -157,7 +158,6 @@ footer {
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding: 10px 5%;
     background-color: var(--secondary-color);
     color: var(--text-color)
 }
@@ -165,20 +165,19 @@ footer {
 .redes{
     display: flex;
     flex-direction: column;
-    margin: 3%;
     padding: 20px;
+    margin:10px;
     a{
         text-decoration: none;
         color: var(--text-color);
         border-radius: 10px;
-        padding: 10px;
+        padding: 5px;
         &:hover{
             background-color: var(--primary-color);
         }
     }
     img{
-        width: 50px;
-        height: 50px;
+        width: 25px;
         border-radius: 50%;
     }
 }
@@ -186,8 +185,9 @@ footer {
 .contacto{
     display: flex;
     flex-direction: column;
-    margin: 3%;
-    padding: 20px;
+    padding: 5px;
+    margin:10px;
+
     a{
         text-decoration: none;
         color: var(--text-color);
