--- a/T13_Los40/style.css
+++ b/T13_Los40/style.css
@@ -45,3 +45,8 @@ h1 {
 .grid-item a:hover {
     text-decoration: underline;
 }
+.logo{
+    width: 100px;
+    height: 100px;
+    margin: 0 auto;
+}
