--- a/T13_Los40/style.css
+++ b/T13_Los40/style.css
@@ -1,52 +1,101 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    font-family: 'Arial', sans-serif;
+    background-color: #f0f0f0;
     color: #333;
     margin: 0;
+    padding: 0;
+}
+
+header {
+    background-color: #282828;
+    color: white;
     padding: 20px;
-}
-h1 {
     text-align: center;
-    color: #d32f2f;
 }
-.grid-container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 10px;
-    margin-bottom: 30px;
-    height: 100%;
-}
-.grid-item {
-    background-color: white;
-    border: 1px solid #ddd;
-    padding: 10px;
-    text-align: center;
-    border-radius: 8px;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+header .logo {
+    max-width: 150px;
+}
 
-    img{
-        width: 250px;
-        align-items: center;
-    }
+nav ul {
+    list-style-type: none;
+    padding: 0;
 }
-.grid-item img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 8px;
+
+nav ul li {
+    display: inline;
+    margin: 0 15px;
 }
-.grid-item a {
-    color: #d32f2f;
+
+nav ul li a {
+    color: white;
     text-decoration: none;
+    font-weight: bold;
 }
-.grid-item a:hover {
+
+nav ul li a:hover {
     text-decoration: underline;
 }
-.logo{
-    width: 100px;
-    height: 100px;
-    margin: 0 auto;
+
+h2 {
+    text-align: center;
+    margin-top: 40px;
+    color: #282828;
+}
+
+section {
+    padding: 40px 20px;
+    margin: 20px 0;
+    border-radius: 10px;
+}
+
+section:nth-child(odd) {
+    background-color: #e0e0e0;
+}
+
+section:nth-child(even) {
+    background-color: #c0c0c0;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 20px;
+    padding: 20px;
+}
+
+.grid-item {
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+.grid-item img, .grid-item iframe {
+    width: 100%;
+    height: auto;
+    display: block;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+}
+
+.grid-item img:hover, .grid-item iframe:hover {
+    transform: scale(1.05);
+}
+
+.grid-item a {
+    display: block;
+    padding: 10px;
+    text-align: center;
+    color: #282828;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.grid-item a:hover {
+    background-color: #282828;
+    color: white;
 }
