--- a/T17_Libreria/css/style.css
+++ b/T17_Libreria/css/style.css
@@ -1,9 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&display=swap');
 
+body {
+    font-family: 'Noto Color Emoji', sans-serif;
+}
+
 :root{
-    --bg-color-encabezado:#333;
-    --bg-color-foter:#222;
-    --bg-component:#555;
+    --bg-color-encabezado:green;
+    --bg-color-foter:darkgreen;
+    --bg-component:lightgreen;
     --color-text:#fff;
 }
 
@@ -65,6 +69,7 @@ a img {
 
 main {
     display: grid;
+    margin: 5px;
     grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
 }
 
@@ -125,5 +130,91 @@ section a{
     &:hover{
         background-color: var(--color-text);
         color: var(--bg-component);
+    }
+}
+
+.productos{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-column: 1/3;
+    gap: 10px;
+}
+.producto {
+    text-align: center;
+    background-color: var(--bg-color-encabezado);
+    border-radius: 10px;
+    padding: 10px;
+    
+    img {
+        max-width: 90%;
+        border-radius: 10px;
+        transition: transform 0.3s ease-in-out;
+        
+        &:hover {
+            transform: scale(1.001);
+        }
+    }
+    
+    &:hover .descripcion {
+        opacity: 1;
+        visibility: visible;
+        max-height: 100px;
+        padding: 5px;
+    }
+}
+
+.descripcion {
+    opacity: 0;
+    visibility: hidden;
+    max-height: 0;
+    overflow: hidden;
+    padding: 0;
+    transition: opacity 0.3s ease-in-out, max-height 0.3s ease-in-out, visibility 0.3s;
+
+    button{
+        background-color: var(--bg-component);
+        color: var(--color-text);
+        border: 1px solid var(--color-text);
+        border-radius: 10px;
+        &:hover{
+            background-color: var(--color-text);
+            color: var(--bg-component);
+        }
+    }
+}
+
+
+aside {
+    grid-column: 3/4;
+    background-color: var(--bg-component);
+    border-radius: 10px;
+    padding: 5px;
+    div {
+        padding: 10px;
+        position: sticky;
+        top: 0;
+        h2 {
+            text-align: center;
+            color: var(--color-text);
+        }
+        ul{
+            display: flex;
+            flex-direction: column;
+            list-style: none;
+            padding: 0;
+            margin-left: 10px;
+            gap: 25px;
+            a{
+                background-color: var(--primary-color);
+                text-decoration: none;
+                color: var(--text-color);
+                padding: 10px;
+                border-radius: 10px;
+                &:hover{
+                    background-color: var(--secondary-color);
+                    color: var(--accent-color);
+                }
+            }
+        }
     }
 }
