--- a/T17_Libreria/css/style.css
+++ b/T17_Libreria/css/style.css
@@ -1,31 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&display=swap');
 
-body {
-    font-family: 'Noto Color Emoji', sans-serif;
-}
-
 :root{
-    --bg-color-encabezado:green;
-    --bg-color-foter:darkgreen;
-    --bg-component:lightgreen;
-    --color-text:#fff;
+    --bg-color-encabezado:#004D43;
+    --bg-color-footer:#004D43;
+    --bg-component:#F7F8F9;
+
+    --bg-button-component:#EBAA20;
+
+
+    --color-text-component:#000;
+    --color-text-header:#fff;
+    --color-text-footer:#fff;
 }
 
-header{
-    background-color: var(--bg-color-encabezado);
-    color:var(--color-text);
-    padding: 5px;
-}
-
-footer{
-    background-color: var(--bg-color-foter);
-    color:var(--color-text);
-    text-align: center;
-    margin-top: auto;
-    padding: 5px;
-}
-
-body{
+body {
+    font-family: Arial, 'Noto Color Emoji', sans-serif;
     padding: 0px;
     margin: 0px;
     display: flex;
@@ -33,72 +22,79 @@ body{
     height: 100vh;
 }
 
-header h1{
-    text-align: center;
-    padding: 1rem;
-}
-
-nav ul{
-    list-style: none;
-
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    padding: 0;
-}
-
-nav ul li{
-    margin: 0 1rem;
-    border: 1px solid var(--color-text);
+header{
+    background-color: var(--bg-color-encabezado);
+    color:var(--color-text-header);
     padding: 5px;
-    border-radius: 10px;
-}
 
-li a {
-    text-decoration: none;
-    color: var(--color-text);
-}
+    h1{
+        text-align: center;
+        padding: 1rem;
+    }
+    
+    nav ul{
+        list-style: none;
+    
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        padding: 0;
+        
+        li{
+            margin: 0 1rem;
+            border: 1px solid var(--color-text);
+            padding: 5px;
+            border-radius: 10px;
+            
+            img{
+                vertical-align: bottom;
+            }
 
-li img{
-    vertical-align: bottom;
-}
-
-a img {
-    vertical-align: bottom;
+            a {
+                text-decoration: none;
+                color: var(--color-text-header);
+                
+                img {
+                    vertical-align: bottom;
+                }
+            }
+        }
+        
+        .lenguage-list {
+            margin-top: 7px;
+            display: none;
+            background-color: var(--bg-color-encabezado);
+            padding: 5px;
+            flex-direction: column;
+            list-style: none;
+            margin-left: auto;
+            a{
+                margin: 5px;
+                background-color: var(--bg-component);
+                padding: 5px;
+                border-radius: 5px;
+            }
+            &:hover {
+                display: flex;
+            }
+        }
+        
+        .lenguage-menu:hover{
+            cursor: pointer;
+        
+            .lenguage-list {
+                position: absolute;
+                display: flex;
+            }
+        }
+    }
+    
 }
 
 main {
     display: grid;
     margin: 5px;
     grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
-}
-
-.lenguage-list {
-    margin-top: 7px;
-    display: none;
-    background-color: var(--bg-color-encabezado);
-    padding: 5px;
-    flex-direction: column;
-    list-style: none;
-    margin-left: auto;
-    a{
-        margin: 5px;
-        background-color: var(--bg-component);
-        padding: 5px;
-        border-radius: 5px;
-    }
-    &:hover {
-        display: flex;
-    }
-}
-
-.lenguage-menu:hover{
-    cursor: pointer;
-
-    .lenguage-list {
-        position: absolute;
-        display: flex;
-    }
 }
 
 section{
@@ -108,28 +104,24 @@ section{
     padding: 10px;
     border-radius: 10px;
     margin: 5px;
-}
-
-section img{
-    width: 70%;
-    border-radius: 10px;
-    &:hover{
-        transition: all 0.5s;
-        scale: 1.05;
+    
+    img{
+        width: 70%;
+        border-radius: 10px;
+        &:hover{
+            transition: all 0.2s ease-in-out;
+            scale: 1.05;
+        }
     }
-}
 
-section a{
-    color: var(--color-text);
-    text-decoration: none;
-
-    border: 1px solid var(--color-text);
-    border-radius: 10px;
-    padding: 5px;
-
-    &:hover{
-        background-color: var(--color-text);
-        color: var(--bg-component);
+    a{
+        background-color: var(--bg-button-component);
+        color: var(--color-text);
+        text-decoration: none;
+    
+        border: 1px solid var(--color-text);
+        border-radius: 5px;
+        padding: 5px;
     }
 }
 
@@ -138,83 +130,83 @@ section a{
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-column: 1/3;
     gap: 10px;
-}
-.producto {
-    text-align: center;
-    background-color: var(--bg-color-encabezado);
-    border-radius: 10px;
-    padding: 10px;
     
-    img {
-        max-width: 90%;
+    .producto {
+        text-align: center;
         border-radius: 10px;
-        transition: transform 0.3s ease-in-out;
+        border: 1px solid #777;
+        padding: 10px;
         
-        &:hover {
-            transform: scale(1.001);
+        img {
+            max-width: 90%;
+            border-radius: 10px;
+            transition: transform 0.3s ease-in-out;
+            
+            &:hover {
+                transform: scale(1.001);
+            }
+        }
+        
+        &:hover .descripcion {
+            opacity: 1;
+            visibility: visible;
+            max-height: 150px;
+            padding: 5px;
+        }
+        
+        .descripcion {
+            opacity: 0;
+            visibility: hidden;
+            max-height: 0;
+            overflow: hidden;
+            padding: 0;
+            transition: opacity 0.3s ease-in-out, max-height 0.3s ease-in-out, visibility 0.3s;
+        
+            button{
+                background-color: var(--bg-button-component);
+                color: var(--color-text);
+                border: transparent;
+                border-radius: 10px;
+                padding: 5px;
+
+            }
         }
     }
-    
-    &:hover .descripcion {
-        opacity: 1;
-        visibility: visible;
-        max-height: 100px;
-        padding: 5px;
-    }
 }
-
-.descripcion {
-    opacity: 0;
-    visibility: hidden;
-    max-height: 0;
-    overflow: hidden;
-    padding: 0;
-    transition: opacity 0.3s ease-in-out, max-height 0.3s ease-in-out, visibility 0.3s;
-
-    button{
-        background-color: var(--bg-component);
-        color: var(--color-text);
-        border: 1px solid var(--color-text);
-        border-radius: 10px;
-        &:hover{
-            background-color: var(--color-text);
-            color: var(--bg-component);
-        }
-    }
-}
-
 
 aside {
     grid-column: 3/4;
-    background-color: var(--bg-component);
-    border-radius: 10px;
     padding: 5px;
     div {
         padding: 10px;
         position: sticky;
         top: 0;
+        border-radius: 10px;
+        background-color: var(--bg-component);
         h2 {
             text-align: center;
             color: var(--color-text);
         }
-        ul{
-            display: flex;
-            flex-direction: column;
-            list-style: none;
-            padding: 0;
-            margin-left: 10px;
-            gap: 25px;
-            a{
-                background-color: var(--primary-color);
-                text-decoration: none;
-                color: var(--text-color);
-                padding: 10px;
-                border-radius: 10px;
-                &:hover{
-                    background-color: var(--secondary-color);
-                    color: var(--accent-color);
-                }
-            }
+        input{
+            margin: 5px;
+            padding: 5px;
+            border-radius: 5px;
+            border: 1px solid transparent;
+        }
+
+        select{
+            margin: 5px;
+            padding: 5px;
+            border-radius: 5px;
+            border: 1px solid transparent;
         }
     }
+}
+
+footer{
+    background-color: var(--bg-color-footer);
+    color:var(--color-text-footer);
+    text-align: center;
+    margin-top: auto;
+    padding: 5px;
 }
