--- a/T17_Libreria/css/style.css
+++ b/T17_Libreria/css/style.css
@@ -132,6 +132,7 @@ section{
     gap: 10px;
     
     .producto {
+        min-height: 250px;
         text-align: center;
         border-radius: 10px;
         border: 1px solid #777;
