--- a/T17_Libreria/css/style.css
+++ b/T17_Libreria/css/style.css
@@ -26,22 +26,22 @@ header{
     background-color: var(--bg-color-encabezado);
     color:var(--color-text-header);
     padding: 5px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 
-    h1{
-        text-align: center;
-        padding: 1rem;
+    .logo{
+        height: 50px;
     }
     
     nav ul{
         list-style: none;
-    
         display: flex;
         flex-direction: row;
         justify-content: center;
-        padding: 0;
         
         li{
-            margin: 0 1rem;
+            margin: 0 1.7rem;
             border: 1px solid var(--color-text);
             padding: 5px;
             border-radius: 10px;
@@ -83,8 +83,13 @@ header{
             cursor: pointer;
         
             .lenguage-list {
+                background-color: var(--bg-color-encabezado);
                 position: absolute;
                 display: flex;
+                a {
+                    color: var(--color-text-header);
+                    background-color: var(--bg-button-component);
+                }
             }
         }
     }
@@ -104,6 +109,7 @@ section{
     padding: 10px;
     border-radius: 10px;
     margin: 5px;
+    box-shadow: 1px 1px 6px 1px var(--color-text-component);
     
     img{
         width: 70%;
@@ -130,6 +136,7 @@ section{
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-column: 1/3;
     gap: 10px;
+    box-shadow: 1px 1px 5px 1px var(--color-text-component);
     
     .producto {
         min-height: 250px;
@@ -148,13 +155,15 @@ section{
             }
         }
         
-        &:hover .descripcion {
-            opacity: 1;
-            visibility: visible;
-            max-height: 150px;
-            padding: 5px;
+        &:hover{
+            box-shadow: 1px 1px 5px 1px var(--color-text-component); 
+            .descripcion {
+                opacity: 1;
+                visibility: visible;
+                max-height: 150px;
+                padding: 5px;
+            }
         }
-        
         .descripcion {
             opacity: 0;
             visibility: hidden;
@@ -184,15 +193,18 @@ aside {
         top: 0;
         border-radius: 10px;
         background-color: var(--bg-component);
+        box-shadow: 1px 1px 5px 1px var(--color-text-component);
         h2 {
             text-align: center;
             color: var(--color-text);
         }
         input{
+            width: 70%;
             margin: 5px;
             padding: 5px;
             border-radius: 5px;
             border: 1px solid transparent;
+            box-shadow: 1px 1px 5px 1px var(--color-text-component);
         }
 
         select{
@@ -200,6 +212,7 @@ aside {
             padding: 5px;
             border-radius: 5px;
             border: 1px solid transparent;
+            box-shadow: 1px 1px 5px 1px var(--color-text-component);
         }
     }
 }
