--- a/T17_Libreria/css/style.css
+++ b/T17_Libreria/css/style.css
@@ -41,6 +41,7 @@ header{
         justify-content: center;
         
         li{
+            cursor: pointer;
             margin: 0 1.7rem;
             border: 1px solid var(--color-text);
             padding: 5px;
@@ -215,6 +216,18 @@ aside {
             box-shadow: 1px 1px 5px 1px var(--color-text-component);
         }
     }
+}
+
+dialog{
+    background-color: var(--bg-component);
+    color: var(--color-text-component);
+
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 1px 1px 5px 1px var(--color-text-component);
+    text-align: center;
+
+    
 }
 
 footer{
