--- a/T17_Libreria/css/style.css
+++ b/T17_Libreria/css/style.css
@@ -227,7 +227,21 @@ dialog{
     box-shadow: 1px 1px 5px 1px var(--color-text-component);
     text-align: center;
 
+    #carrito-lista{
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        padding: 10px;
+        list-style: none;
+        margin: 0;
+    }
     
+    .carrito-producto{
+        img{
+            width: 50px;
+            border-radius: 10px;
+        }
+    }
 }
 
 footer{
