--- a/T17_Libreria/css/style.css
+++ b/T17_Libreria/css/style.css
@@ -6,7 +6,7 @@
     --bg-component:#F7F8F9;
 
     --bg-button-component:#EBAA20;
-
+    --bg-button-component-hover:#D9017A;
 
     --color-text-component:#000;
     --color-text-header:#fff;
@@ -221,12 +221,27 @@ aside {
 dialog{
     background-color: var(--bg-component);
     color: var(--color-text-component);
-
+    height: 80%;
+    width: 50%;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 1px 1px 5px 1px var(--color-text-component);
     text-align: center;
 
+    button{
+        background-color: var(--bg-button-component);
+        color: var(--color-text-component);
+        border: transparent;
+        border-radius: 10px;
+        padding: 5px;
+        margin: 5px;
+
+        &:hover{
+            background-color: var(--bg-button-component-hover);
+            color: var(--color-text-footer);
+            transition: all 0.2s ease-in-out;
+        }
+    }
     #carrito-lista{
         display: flex;
         flex-direction: column;
@@ -237,9 +252,40 @@ dialog{
     }
     
     .carrito-producto{
+        display: flex;
+        flex-direction: row;
+
+
+        gap: 2%;        
+        box-shadow: 1px 1px 5px 1px var(--color-text-component);
+        padding: 5px;
+
         img{
-            width: 50px;
+            width: 20%;
             border-radius: 10px;
+        }
+
+        div{
+            text-align: left;
+            h2{
+                margin-top: 0px;
+            }
+            button{
+                background-color: var(--bg-button-component);
+                border: transparent;
+                border-radius: 50%;
+                width: 30px;
+                height: 30px;
+                img{
+                    height: 100%;
+                    width: 100%;
+                }
+
+                &:hover{
+                    background-color: var(--bg-button-component-hover);
+                    transition: all 0.2s ease-in-out;
+                }
+            }
         }
     }
 }
